@@ -4,6 +4,7 @@ Changelog
 1.0b3 (XXXX-XX-XX)
 ------------------
 
+* Set CSS classes for the comment form in the updateActions method. [timo]  
 * Respect the allow_comments field on an object and avoid calculations if no comments should be shown. [hannosch]
 * Automatically load the ZCML files of the captcha widgets if they are installed. [hannosch]
 * Fixed i18n domain in GenericSetup profiles to be ``plone``. Other values aren't supported for GS profiles. [hannosch]
